# tt-audio-lab

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCH.md  CODING_STANDARD.md  PRD.md  SESSION_SUMMARY_2026-02-15.md
scripts/: check-cn-comments.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  settings.rs
src-tauri/src/audio/: capture.rs  dsp.rs  mod.rs  ring_buffer.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/desktop/: click_through.rs  mod.rs  window_mode.rs
src-tauri/src/telemetry/: mod.rs
src/app/: App.vue  main.ts  types.ts
src/app/components/: SettingsModal.vue  SpectrumCanvas.vue
src/app/locales/: zh-CN.ts
src/app/stores/: settings.ts
src/app/visualization/: frame-store.ts  tuning.ts  types.ts
