[package]
name = "tt-audio-lab"
version = "0.1.0"
description = "Windows desktop audio visualizer widget"
authors = ["tt-audio-lab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
